fix header dropdown have layout shift when toggling

--- a/site/src/styles/global.css
+++ b/site/src/styles/global.css
@@ -41,6 +41,10 @@
 	scrollbar-gutter: stable;
 }
 
+#container > :not(.dropdown) {
+	@apply container mx-auto shadow-sm;
+}
+
 #content * {
 	@apply scroll-mt-20;
 }
